# diabetes_classification

./: 01-k-nearest-neighbors.py.ipynb  README.md  diabetes_prediction-knn.ipynb  diabetes_prediction.ipynb  diabetes_prediction_trees.ipynb  exploratory-data-analysis.ipynb  process_data.py  pyproject.toml
.ipynb_checkpoints/: 01-k-nearest-neighbors.py-checkpoint.ipynb  02-support-vector-classification.py-checkpoint.ipynb  03-decision-tree-classifier.py-checkpoint.ipynb  05-logistic-regression-classifier.py-checkpoint.ipynb  diabetes_prediction-knn-checkpoint.ipynb
Modeling/: 03-decision-tree-classifier.py.ipynb  05-logistic-regression-classifier.py.ipynb
